refactor: 직원 등록 기능 수정
테이블 컬럼명 변경에 따른 엔티티 필드명 변경