@@ -1,7 +1,6 @@
 package com.group.commute_app.member.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -9,19 +8,30 @@ import com.group.commute_app.member.domain.Member;
 import com.group.commute_app.member.dto.request.MemberSaveRequest;
 import com.group.commute_app.member.dto.response.MemberResponse;
 import com.group.commute_app.member.repository.MemberRepository;
+import com.group.commute_app.team.domain.Team;
+import com.group.commute_app.team.repository.TeamRepository;
 
 @Service
 public class MemberService {
 
 	private final MemberRepository memberRepository;
+	private final TeamRepository teamRepository;
 
-	public MemberService(MemberRepository memberRepository) {
+	public MemberService(MemberRepository memberRepository, TeamRepository teamRepository) {
 		this.memberRepository = memberRepository;
+		this.teamRepository = teamRepository;
 	}
 
 	public void saveMember(MemberSaveRequest request) {
-		Member member = new Member(request.getName(), request.isManager(), request.getEmployeeDate(),
-			request.getBirthdayDate());
+		Team team = teamRepository.findByName(request.getTeamName())
+			.orElseThrow(IllegalArgumentException::new);
+
+		Member member = new Member(
+			request.getName(),
+			request.isManager(),
+			request.getWorkStartDate(),
+			request.getBirthday(),
+			team);
 		memberRepository.save(member);
 	}
 
@@ -32,9 +42,9 @@ public class MemberService {
 				member.getName(),
 				member.getTeam().getName(),
 				member.isManager(),
-				member.getBirthdayDate(),
-				member.getEmploymentDate()
+				member.getBirthday(),
+				member.getWorkStartDate()
 			))
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
